# yunomia

./: CHANGELOG.md  README.md
app/: package-lock.json  package.json
app/scripts/: heartbeat-capture.ts  heartbeat-simulate.ts
app/src/dashboard/: dashboard.js  index.html  styles.css
app/src/server/: agent-adapter.ts  agent-state.ts  audit-poller.ts  board-client.ts  cost.ts  goals.ts  heartbeat.ts  index.ts  kickoff.ts  local-config.ts  mcp-server.ts  (+9 more)
docs/: PROPOSAL-PRESETS-AND-SKILLS.md  PROPOSAL-PRODUCT.md  PROPOSAL-WORKER-RELIABILITY.md  RED-TEAM-PRODUCT-FEEDBACK.md
presets/app-dev/: GOALS.md  SOUL.md  config.json
presets/architecture/: GOALS.md  SOUL.md  config.json
presets/branding/: GOALS.md  SOUL.md  config.json
presets/copywriting/: GOALS.md  SOUL.md  config.json
presets/default/: GOALS.md  SOUL.md  config.json
presets/security/: GOALS.md  SOUL.md  config.json
presets/website/: GOALS.md  SOUL.md  config.json
skills/brand-audit/: prompt.md  skill.json
skills/code-review/: prompt.md  skill.json
skills/content-review/: prompt.md  skill.json
skills/deploy-ftp/: prompt.md  skill.json
skills/deploy-ssh/: prompt.md  skill.json
skills/red-team/: prompt.md  skill.json
skills/security-scan/: prompt.md  skill.json
skills/seo-audit/: prompt.md  skill.json
skills/test-suite/: prompt.md  skill.json
v3/: package-lock.json  package.json  vite.config.js
v3/src/: index.html  main.js  style.css
v3/src-tauri/: Cargo.toml  tauri.conf.json
v3/src-tauri/capabilities/: default.json
v3/src-tauri/src/: lib.rs  main.rs  pty.rs  store.rs  tickets.rs
(+8 files in other folders)
